# gst-wpe-broadcast-demo

./: Cargo.toml  README.md  com.igalia.GstWPEBroadcastDemo.yaml  gst-wpe-broadcast-demo.flatpakref  meson.build
data/: com.igalia.GstWPEBroadcastDemo.appdata.xml  com.igalia.GstWPEBroadcastDemo.desktop  index.html  style.css
scripts/: cargo.sh
src/: about_dialog.rs  app.rs  audio_vumeter.rs  header_bar.rs  main.rs  pipeline.rs  settings.rs
